--- a/index.html
+++ b/index.html
@@ -7,24 +7,21 @@
 </head>
 
 <body>
-    <h1> Lab 3 maps! </h1>
+    <h1> Lab 4 map! </h1>
 
-    <h2> Section 1: point data </h2>
+    <h2> Mapbox base layer + locations of United States ports </h2>
 
-    <h3> United States capital cities sized by 2023 population </h3>
+    <h3>Ports are sized based on the tonnage of imports and exports processed</h3>
 
-    <div id ="mappy1_lab3"></div>
+    <div id ="mappy1_lab4"></div>
 
-    <p style="margin-bottom: 50px;">Data from the <a href="https://www.census.gov/data/tables/time-series/demo/popest/2020s-state-total.html">US Census</a></p>
+    <p style="margin-bottom: 50px;">Data from the 
+        <a href="https://data-usdot.opendata.arcgis.com/datasets/e3b6065cce144be8a13a59e03c4195fe_1/explore?location=31.734476%2C63.806950%2C2.59">
+            Department of US Transportation</a></p>
 
 
-    <h2> Section 2: choropleth data </h2>
-
-    <h3> United States water-to-land area ratios </h3>
-
-    <div id = "mappy2_lab3"></div>
-
-    <p style="margin-bottom: 50px;"> Data from the <a href ="https://www.census.gov/geographies/mapping-files/2020/geo/tiger-line-file.html">US Census TIGER/Line Shapefiles</a></p>
+   
+    <p style="margin-bottom: 50px;"></p>
 
    
 </body>
@@ -36,7 +33,7 @@
     </script> 
 
 
-<script src = "js/scripts_lab3.js" defer></script> 
+<script src = "js/scripts_lab4.js" defer></script> 
 
 
 
